--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -110,7 +110,7 @@ Institute Dashboard
               <table class="table table-bordered table-hover table-striped table-checkable table-highlight-head mb-4">
                 <thead>
                   <tr>
-                    <th class="">#</th>
+                    <th class="">Sr No</th>
                     <th class="">Class</th>
                     <th class="">Course</th>
                     <th class="text-center">Actions</th>
