--- a/templates/batches/batch-timing.html
+++ b/templates/batches/batch-timing.html
@@ -57,7 +57,19 @@
         </div>
 
       </div>
-      <div class="mx-2 row mt-4">       
+      <div class="mx-2 row mt-4"> 
+        
+        
+        <div class="col">
+          <label for="validationCustom01"><strong>Teaching Type <span class="red">*</span></strong></label>           
+           <select id="teachingtype" name='teaching'  style="width: 100%;"
+              class="js-example-basic-single form-control ">
+              <option value="Online">Online</option>
+              <option value="ClassRoom">Class Room</option>
+            
+            </select>          
+        </div>
+
 
         <div class="col">
           <label for="validationCustom01"><strong>Start Time <span class="red">*</span></strong></label>
@@ -80,7 +92,7 @@
 
           <div>
             <select class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true"  multiple="multiple" id="days" name='fordays' required>
-              <option value="disabled">Day</option>
+              
               <option value="Sunday">Sunday</option>
               <option value="Monday">Monday</option>
               <option value="Tuesday">Tuesday</option>
@@ -91,6 +103,10 @@
             </select>
           </div>
         </div>
+
+
+        
+
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-primary"> Submit </button>
@@ -133,7 +149,9 @@
               <th>Start Time</th>
               <th>End Time</th>
               <th>Days</th>
+              <th>Teaching Type</th>
               <th class='text-center'>Action</th>
+              
 
             </tr>
             <!--Table head-->
@@ -142,16 +160,17 @@
             {% for i in bat %}
             <tr>
               <td>{{i.batchName}}</td>
-              <td>{{i.course.courseName}}</td>
-              <td>{{i.course.forclass}}</td>
+              <td>{{i.course}}</td>
+              <td>{{i.forclass}}</td>
               <td>{{i.startTime}}</td>
               <td>{{i.endTime}}</td>
               <td>{{i.days}}</td>
+              <td>{{i.teachingtype}}</td>
 
               <td class="text-center">
                 <a class="btn btn-warning" href="{% url 'batchTimingEdit' i.id %}"><i class="flaticon-pencil-line"
                     style="font-size:medium;"></i></a>
-                <a class="btn btn-danger" href="{% url 'batchTimingdelete' i.id %}"><i class="flaticon-delete-fill"
+                <a class="btn btn-danger confirm-inactive"   href="{% url 'batchTimingdelete' i.id %}"><i class="flaticon-delete-fill"
                     style="font-size:medium;"></i></a>              
 
               </td>
@@ -184,6 +203,14 @@
 
 
   <script>
+     $(document).on('click', '.confirm-inactive', function(){
+    return confirm('Are you sure you want to delete this?');
+    })
+     
+    $(document).on('click', '.confirm-active', function(){
+    return confirm('Are you sure you want to active this?');
+    })
+    
     function checkbox() {
       var value = $("#negativecheck").is(":checked");
       negative = document.getElementById("negative");
