--- a/templates/courses-2/archive-teaching.html
+++ b/templates/courses-2/archive-teaching.html
@@ -78,7 +78,7 @@
                             <td>{{ forloop.counter }}</td>
                             <td>{{i.course.courseName}}</td>
                             <td>{{ i.course.forclass }}</td>
-                            <td>{{i.teachType}} {{i.duration}}</td>
+                            <td>{{i.teachType}}</td>
                             <td>{{i.duration}}</td>
                             <td>{{i.timePeriod}}</td>
 
